// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment Provisioning step components country differences Bank Account step snapshots renders CAN bank account fields 1`] = `
<business-bank-account-form-step>
  <div class="gap-5 row">
    <div class="col-12">
      <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 40%; height: 40px;"></div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
  </div>
</business-bank-account-form-step>
`;

exports[`Payment Provisioning step components country differences Bank Account step snapshots renders USA bank account fields 1`] = `
<business-bank-account-form-step>
  <div class="gap-5 row">
    <div class="col-12">
      <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 40%; height: 40px;"></div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
  </div>
</business-bank-account-form-step>
`;

exports[`Payment Provisioning step components country differences Business Core Info step snapshots renders CAN Business Number (BN) label and help text 1`] = `
<business-core-info-form-step>
  <div class="gap-5 row">
    <div class="col-12">
      <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 40%; height: 40px;"></div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
  </div>
</business-core-info-form-step>
`;

exports[`Payment Provisioning step components country differences Business Core Info step snapshots renders USA tax ID label and help text 1`] = `
<business-core-info-form-step>
  <div class="gap-5 row">
    <div class="col-12">
      <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 40%; height: 40px;"></div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
  </div>
</business-core-info-form-step>
`;

exports[`Payment Provisioning step components country differences Form Address Fields component snapshots renders CAN address fields with Province/Postal Code labels 1`] = `
<form-address-fields>
  <div class="gy-3 row">
    <div class="col-12">
      <form-control-text helptext="No PO Boxes." label="Street Address" name="line1"></form-control-text>
    </div>
    <div class="col-12">
      <form-control-text label="Address Line 2 (optional)" name="line2"></form-control-text>
    </div>
    <div class="col-12">
      <form-control-text label="City" name="city"></form-control-text>
    </div>
    <div class="col-12 col-md-6">
      <form-control-select label="Province / State" name="state"></form-control-select>
    </div>
    <div class="col-12 col-md-6">
      <form-control-text label="Postal / Zip Code" maxlength="7" name="postal_code"></form-control-text>
    </div>
  </div>
</form-address-fields>
`;

exports[`Payment Provisioning step components country differences Form Address Fields component snapshots renders USA address fields with State/Zip labels 1`] = `
<form-address-fields>
  <div class="gy-3 row">
    <div class="col-12">
      <form-control-text helptext="No PO Boxes." label="Street Address" name="line1"></form-control-text>
    </div>
    <div class="col-12">
      <form-control-text label="Address Line 2 (optional)" name="line2"></form-control-text>
    </div>
    <div class="col-12">
      <form-control-text label="City" name="city"></form-control-text>
    </div>
    <div class="col-12 col-md-6">
      <form-control-select label="State" name="state"></form-control-select>
    </div>
    <div class="col-12 col-md-6">
      <form-control-text label="Zip Code" maxlength="5" name="postal_code"></form-control-text>
    </div>
  </div>
</form-address-fields>
`;

exports[`Payment Provisioning step components country differences Legal Address step snapshots renders CAN Province and Postal Code labels 1`] = `
<legal-address-form-step>
  <div class="gap-5 row">
    <div class="col-12">
      <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 40%; height: 40px;"></div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
  </div>
</legal-address-form-step>
`;

exports[`Payment Provisioning step components country differences Legal Address step snapshots renders USA State and Zip Code labels 1`] = `
<legal-address-form-step>
  <div class="gap-5 row">
    <div class="col-12">
      <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 40%; height: 40px;"></div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
  </div>
</legal-address-form-step>
`;

exports[`Payment Provisioning step components country differences Owners step snapshots renders CAN SIN labels in owner forms 1`] = `
<business-owners-form-step>
  <div class="gap-5 row">
    <div class="col-12">
      <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 40%; height: 40px;"></div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
  </div>
</business-owners-form-step>
`;

exports[`Payment Provisioning step components country differences Owners step snapshots renders USA SSN labels in owner forms 1`] = `
<business-owners-form-step>
  <div class="gap-5 row">
    <div class="col-12">
      <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 40%; height: 40px;"></div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
  </div>
</business-owners-form-step>
`;

exports[`Payment Provisioning step components country differences Representative step snapshots renders CAN SIN labels and help text 1`] = `
<business-representative-form-step>
  <div class="gap-5 row">
    <div class="col-12">
      <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 40%; height: 40px;"></div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
  </div>
</business-representative-form-step>
`;

exports[`Payment Provisioning step components country differences Representative step snapshots renders USA SSN labels and help text 1`] = `
<business-representative-form-step>
  <div class="gap-5 row">
    <div class="col-12">
      <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 40%; height: 40px;"></div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
    <div class="gap-3 row">
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 25%;"></div>
      </div>
      <div class="col-12">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 100%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 50%;"></div>
      </div>
      <div class="col-12 d-flex gap-3">
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 65%;"></div>
        <div aria-hidden="true" class="skeleton undefined" part="skeleton" style="width: 35%;"></div>
      </div>
    </div>
  </div>
</business-representative-form-step>
`;
